--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <html>
   <head>
+    <link href='file:///C:/CodecademyProjects/Broadway/css/Resources/style.css' type='text/css' rel='stylesheet'>
     <meta charset="UTF-8">
-    <link href="C:\CodecademyProjects\Broadway\css\Resources\style.css" type="text/css" rel="stylesheet"/>
       <title>Broadway</title>
   </head>
   <body>
@@ -21,17 +21,19 @@
     <!--Our Process-->
     <div>
       <h2 id="process">Our Process</h2>
-      <img id="identify" src="C:\CodecademyProjects\Broadway\css\identify.svg">
+      <img id="identify" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
       <h3>Identify</3h>
         <p id="identifytxt">We focus on the most important details.</p>
-        <img id="understand" src="C:\CodecademyProjects\Broadway\css\understand.svg">
+        <img id="understand" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
         <h3>Understand</h3>
         <p id="understandtxt">We study our projects inside and out.</p>
-        <img id="execute" src="C:\CodecademyProjects\Broadway\css\execute.svg">
+        <img id="execute" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
         <p id="executetxt">We put everything we have into our work.</p>
       </div>
       <!--Designed in New York with background stripe-->
-      <div id="desinny"><p>Designed in New York</p></div>
+      <div id="desinny">
+      <h2>Designed in New York</h2>
+    </div>
       <!--Portfolio Team and Contact info-->
       <div>
         <h3 id="work">Portfolio</h3>
@@ -42,23 +44,16 @@
         <p>Phone: (555)555-5555</p>
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
+      </div>
         <!--Footer Secion-->
-      </div class="footer">
-      <p>© Broadway 2017</p>
-      <a class="btn-nav" href="home">Home</a>
-      <a class="btn-nav" href="process">About</a>
-      <a class="btn-nav" href="work">Work</a>
-      <a class="btn-nav" href="team">Team</a>
-      <a class-"btn-nav" href="contact">Contact</a>
-
-
-
-
-
-
-
-
-
-
+      <div id="footer">
+      <p>© Broadway 2017
+      <a class="btn-nav2" href="#home">Home</a>
+      <a class="btn-nav2" href="#process">About</a>
+      <a class="btn-nav2" href="#work">Work</a>
+      <a class="btn-nav2" href="#team">Team</a>
+      <a class="btn-nav2" href="#contact">Contact</a>
+    </p>
+  </div>
   </body>
 </html>
